Add modal to add user

--- a/app/views/courses/students.html.erb
+++ b/app/views/courses/students.html.erb
@@ -6,4 +6,22 @@
 
 <br>
 
-<%= link_to 'New Student', new_course_enrollment_path(course_id: @course.id) %>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addEnrollment">
+  Add student
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="addEnrollment" tabindex="-1" role="dialog" aria-labelledby="addEnrollmentLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="addEnrollmentLabel">Add student</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'enrollments/form', course: @course, enrollment: Enrollment.new %>
+      </div>
+    </div>
+  </div>
+</div>
