--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,5 +1,16 @@
 <% form_params = [person] if local_assigns[:form_params].nil? %>
-<%= form_for(*form_params) do |f| %>
+<%= form_for(*form_params, remote: true) do |f| %>
+  <% if person.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(person.errors.count, "error") %> prohibited this person from being saved:</h2>
+
+      <ul>
+      <% person.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="field form-group">
     <%= f.label :first_name %>
@@ -37,4 +48,7 @@
   <div class="form-group actions">
     <%= f.submit local_assigns[:submit_btn_text], class: "btn btn-success" %>
   </div>
+  <% if local_assigns[:course].present? %>
+    <input type="hidden" name="course_id" value="<%= course.id %>"/>
+  <% end %>
 <% end %>
