--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -6,6 +6,16 @@
 </p>
 
 <p>
+  <strong>Start date:</strong>
+  <%= @assignment.start_date %>
+</p>
+
+<p>
+  <strong>End date:</strong>
+  <%= @assignment.end_date %>
+</p>
+
+<p>
   <strong>Statement:</strong>
   <%= markdown(@assignment.statement) %>
 </p>
