--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "*";
+
+table > thead {
+  th {
+    background: $brand-primary;
+    color: white;
+  }
+}
