Replace students with enrollments

--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <%= render 'form', person: @person %>
+    <%= render 'form', person: @person, course: @course %>
   </div>
 </div>
 
