--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Enrollments</h1>
+<h1>Students</h1>
 
 <table class="table table-bordered">
   <thead>
     <tr>
       <th>Student</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -15,8 +15,9 @@
       <tr>
         <td><%= enrollment.student %></td>
         <td><%= link_to 'Show', [@course, enrollment] %></td>
-        <td><%= link_to 'Edit', edit_course_enrollment_path(id: enrollment.id) %></td>
-        <td><%= link_to 'Destroy', [@course, enrollment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit Enrollment', edit_course_enrollment_path(id: enrollment.id) %></td>
+        <td><%= link_to 'Edit student', edit_person_path(enrollment.student) %></td>
+        <td><%= link_to 'Destroy Enrollment', [@course, enrollment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +25,43 @@
 
 <br>
 
-<%= link_to 'New Enrollment', new_course_enrollment_path %>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addEnrollment">
+  Add student
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="addEnrollment" tabindex="-1" role="dialog" aria-labelledby="addEnrollmentLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="addEnrollmentLabel">Add student</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'enrollments/form', course: @course, enrollment: Enrollment.new %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addPersonAndEnrollment">
+  Create Person
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="addPersonAndEnrollment" tabindex="-1" role="dialog" aria-labelledby="addPersonAndEnrollmentLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="addPersonAndEnrollmentLabel">Add student</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'people/form', course: @course, person: Person.new, form_params: [Person.new, remote: true] %>
+      </div>
+    </div>
+  </div>
+</div>
