--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Code</th>
       <th>Teacher</th>
+      <th>Interest</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,9 @@
         <td class="td" id="td"><%= course.title %></td>
         <td><%= course.code %></td>
         <td><%= course.teacher %></td>
+        <td>
+          <button type="button" class="btn btn-link glyphicon glyphicon-heart"></button>
+        </td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
         <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,3 +33,21 @@
 <br>
 
 <%= link_to 'New Course', new_course_path, class: "btn btn-info" %>
+
+<script>
+    $("button").click(function () {
+        $(this).toggleClass('active');
+        $(this).blur();
+        $.ajax({
+            type: "POST",
+            url: "course_people_controller/usercourse",
+            data: "",
+            datatype: 'json',
+            contentType: 'application/json; charset=utf-8'
+        }).done(function (msg) {
+            alert('done');
+        }).fail(function (msg) {
+            alert("Sorry couldn't find what you want");
+        })
+    });
+</script>
